Use Java 11 and Jakarta EE 9